--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles/style.css?cb=1634917144524">
+    <link rel="stylesheet" href="styles/style.css?cb=1634958813855">
 
 </head>
 
@@ -18,23 +18,25 @@
     <div id="root">
         <div class="main-container"><input type="text" class="search" placeholder="Search..." value="">
             <div class="city">
-                <h2 class="city-name"><span>Dhaka</span><sup>BD</sup></h2>
+                <!-- <h2 class="city-name"><span>Dhaka</span><sup>BD</sup></h2>
                 <div class="city-temp">29<sup>°C</sup></div>
                 <div class="info"><img class="city-icon" src="https://openweathermap.org/img/wn/50n@2x.png" alt="haze">
                     <p>haze</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('serviceworker.js?cb=1634917144524')
+                navigator.serviceWorker.register('serviceworker.js?cb=1634958813855')
                     .then((reg) => console.log('Success: ', reg.scope))
                     .catch((err) => console.log('Failure: ', err));
             })
         }
     </script>
+    <script type="text/javascript" src="SalatTimeTable24.minify.json"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
     <!-- <script src="/static/js/bundle.js"></script>
     <script src="/static/js/0.chunk.js"></script>
     <script src="/static/js/main.chunk.js"></script> -->
