--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles/style.css?cb=1634982788858">
+    <link rel="stylesheet" href="styles/style.css?cb=1634991471600">
 
 </head>
 
@@ -50,7 +50,7 @@
                     </tr>
                     <tr>
                         <td>যোহর শুরু</td>
-                        <td id="johor-start">6000</td>
+                        <td id="duhr-start">6000</td>
                     </tr>
                     <tr>
                         <td>আসর শুরু</td>
@@ -76,7 +76,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('serviceworker.js?cb=1634982788858')
+                navigator.serviceWorker.register('serviceworker.js?cb=1634991471600')
                     .then((reg) => console.log('Success: ', reg.scope))
                     .catch((err) => console.log('Failure: ', err));
             })
