--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles/style.css?cb=1634991471600">
+    <link rel="stylesheet" href="styles/style.css?cb=1634994403067">
 
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-        <div class="main-container"><input type="text" class="search" placeholder="Search..." value="">
+        <div class="main-container">
+            <!-- <input type="text" class="search" placeholder="Search..." value=""> -->
             <!-- <div class="city">
                 <h2 class="city-name"><span>Dhaka</span><sup>BD</sup></h2>
                 <div class="city-temp">29<sup>°C</sup></div>
@@ -27,8 +28,8 @@
             <table class="styled-table">
                 <thead>
                     <tr>
-                        <th>October 23, 2021</th>
-                        <th>Rabiul Awal 15, 1443</th>
+                        <th id="date-english">October 23, 2021</th>
+                        <th id="date-hijri">Rabiul Awal 15, 1443</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -76,13 +77,14 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('serviceworker.js?cb=1634991471600')
+                navigator.serviceWorker.register('serviceworker.js?cb=1634994403067')
                     .then((reg) => console.log('Success: ', reg.scope))
                     .catch((err) => console.log('Failure: ', err));
             })
         }
     </script>
     <script type="text/javascript" src="SalatTimeTable24.minify.json"></script>
+    <script type="text/javascript" src="english_hijri_mapping.json"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
     <!-- <script src="/static/js/bundle.js"></script>
     <script src="/static/js/0.chunk.js"></script>
