--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Islamic Time App</title>
-    <link rel="stylesheet" href="styles/style.css?cb=1635001314906">
+    <link rel="stylesheet" href="styles/style.css?cb=1634991471600">
 
 </head>
 
@@ -69,6 +69,9 @@
                         <td>এশা শুরু</td>
                         <td id="isha-start">6000</td>
                     </tr>
+                    <tr id="info-tr">
+                        <td colspan="2" id="info">* শুধুমাত্র ঢাকা জেলার জন্য প্রযোজ্য</td>
+                    </tr>
                     <!-- and so on... -->
                 </tbody>
             </table>
@@ -77,7 +80,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('serviceworker.js?cb=1635001314906')
+                navigator.serviceWorker.register('serviceworker.js?cb=1634991471600')
                     .then((reg) => console.log('Success: ', reg.scope))
                     .catch((err) => console.log('Failure: ', err));
             })
