'time' changed to 'times'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Islamic Times PWA">
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
-    <title>Islamic Time App</title>
+    <title>Islamic Times App</title>
     <link rel="stylesheet" href="styles/style.css?cb=1635004385318">
 
 </head>
