--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Islamic Times App</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css?cb=1635158803201">
 
 </head>
 
@@ -17,6 +17,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
         <div class="main-container">
+            <button id="enableNotifications">🔔 Enable Notification</button>
             <!-- <input type="text" class="search" placeholder="Search..." value=""> -->
             <!-- <div class="city">
                 <h2 class="city-name"><span>Dhaka</span><sup>BD</sup></h2>
@@ -87,7 +88,7 @@
             </table>
         </div>
     </div>
-    <script>
+    <!-- <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('serviceworker.js')
@@ -95,10 +96,10 @@
                     .catch((err) => console.log('Failure: ', err));
             })
         }
-    </script>
+    </script> -->
     <script type="text/javascript" src="SalatTimeTable24.minify.json"></script>
     <script type="text/javascript" src="english_hijri_mapping.json"></script>
-    <script type="text/javascript" src="scripts/index.js" defer></script>
+    <script type="text/javascript" src="scripts/index.js?cb=1635158803201" defer></script>
     <!-- <script src="/static/js/bundle.js"></script>
     <script src="/static/js/0.chunk.js"></script>
     <script src="/static/js/main.chunk.js"></script> -->
