html and style updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         <td id="asr-start">6000</td>
                     </tr>
                     <tr id="sunset-forbidden-tr">
-                        <td>সূর্যাস্ত ও নামাজের নিষিদ্ধ সময়</td>
+                        <td>সূর্যাস্ত ও নামাজের নিষিদ্ধ সময়
+                            (ঐ দিনের আসর ব্যতীত)
+                        </td>
                         <td id="sunset-forbidden">6000</td>
                     </tr>
                     <tr id="magrib-start-tr">
@@ -76,8 +78,10 @@
                         <td id="isha-start">6000</td>
                     </tr>
                     <tr id="info-tr">
-                        <td colspan="2" id="info">* হিজরি তারিখ (বাংলাদেশ ইসলামিক ফাউন্ডেশন কর্তৃক)
+                        <td colspan="2" id="info">
+                            * হিজরি তারিখ (বাংলাদেশ ইসলামিক ফাউন্ডেশন কর্তৃক)
                             চাঁদ দেখার উপর নির্ভরশীল।<br>
+                            * হিজরি তারিখ ও বার সূর্যাস্তের সাথে সাথে পরিবর্তন হয়।<br>
                             <b>* নামাজের সময়ের তথ্যসূত্র-</b><br> ইসলামিক রিসার্চ সেন্টার বাংলাদেশ কর্তৃক প্রণীত
                             সাহরী-ইফতার ও নামাজের স্থায়ী সময়সূচী (শুধুমাত্র ঢাকা জেলার জন্য)।
                         </td>
