--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="./images/logo.png">
-    <meta name="theme-color" content="#000000">
-    <meta name="description" content="Islamic Times PWA">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Islamic Times PWA-">
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Islamic Times App</title>
