--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="./images/logo.png">
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="Islamic Times PWA-">
+    <meta name="description" content="Islamic Times">
     <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Islamic Times App</title>
@@ -29,53 +29,54 @@
                 <thead>
                     <tr>
                         <!-- <th id="date-english">October 23, 2021</th> -->
-                        <th colspan="2"><span id="date-hijri"> Rabiul Awal 15, 1443</span> <sub
-                                id="date-english">October 23,
-                                2021</sub></th>
+                        <th colspan="2"><span id="date-hijri">মঙ্গল, ১৮ রবিউল আউয়াল ১৪৪৩</span><br>
+                            <span id="date-english">October 23,
+                                2021</span>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr id="sahri-end-tr">
                         <td>সাহরীর শেষ সময়</td>
-                        <td id="sahri-end">6000</td>
+                        <td id="sahri-end">4:43am</td>
                     </tr>
                     <tr id="fajr-start-tr">
                         <td>ফজর শুরু</td>
-                        <td id="fajr-start">6000</td>
+                        <td id="fajr-start">4:48am</td>
                     </tr>
                     <tr id="sunrise-forbidden-tr">
                         <td>সূর্যোদয় ও নামাজের নিষিদ্ধ সময়</td>
-                        <td id="sunrise-forbidden">5150</td>
+                        <td id="sunrise-forbidden">6:01am - 6:11am</td>
                     </tr>
                     <tr id="ishrak-tr">
                         <td>ইশরাক শুরু</td>
-                        <td id="ishrak"></td>
+                        <td id="ishrak">6:11am</td>
                     </tr>
                     <tr id="noon-forbidden-tr">
                         <td>দ্বিপ্রহর ও নামাজের নিষিদ্ধ সময়</td>
-                        <td id="noon-forbidden">5150</td>
+                        <td id="noon-forbidden">11:40am - 11:46am</td>
                     </tr>
                     <tr id="duhr-start-tr">
                         <td>যোহর শুরু</td>
-                        <td id="duhr-start">6000</td>
+                        <td id="duhr-start">11:46am</td>
                     </tr>
                     <tr id="asr-start-tr">
                         <td>আসর শুরু</td>
-                        <td id="asr-start">6000</td>
+                        <td id="asr-start">3:47pm</td>
                     </tr>
                     <tr id="sunset-forbidden-tr">
                         <td>সূর্যাস্ত ও নামাজের নিষিদ্ধ সময়
                             (ঐ দিনের আসর ব্যতীত)
                         </td>
-                        <td id="sunset-forbidden">6000</td>
+                        <td id="sunset-forbidden">5:14pm - 5:24pm</td>
                     </tr>
                     <tr id="magrib-start-tr">
                         <td>মাগরিব শুরু</td>
-                        <td id="magrib-start">6000</td>
+                        <td id="magrib-start">5:27pm</td>
                     </tr>
                     <tr id="isha-start-tr">
                         <td>এশা শুরু</td>
-                        <td id="isha-start">6000</td>
+                        <td id="isha-start">6:41pm</td>
                     </tr>
                     <tr id="info-tr">
                         <td colspan="2" id="info">
