table now responsive

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     <tr>
                         <!-- <th id="date-english">October 23, 2021</th> -->
                         <th colspan="2"><span id="date-hijri">মঙ্গল, ১৮ রবিউল আউয়াল ১৪৪৩</span><br>
-                            <span id="date-english">October 23,
-                                2021</span>
+                            <span id="date-english">27-10-2021</span>
                         </th>
                     </tr>
                 </thead>
