--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-    <link rel="icon" type="image/png" href="./images/logo.png">
+    <link rel="icon" type="image/png" sizes="1024x1024" href="./images/logo.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Islamic Times">
-    <link rel="apple-touch-icon" href="./images/logo.png">
+    <link rel="apple-touch-icon" sizes="1024x1024" href="./images/logo.png">
     <link rel="manifest" href="./manifest.json">
     <title>Islamic Times App</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#009879">
+    <link rel="shortcut icon" href="./images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#009879">
+    <meta name="msapplication-config" content="/images/browserconfig.xml">
 
 </head>
 
