--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
     <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#009879">
     <link rel="shortcut icon" href="./images/favicon.ico">
-    <meta name="msapplication-TileColor" content="#009879">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="/images/browserconfig.xml">
     <!-- apple splash screen -->
     <link rel="apple-touch-icon" href="./images/splashscreens/apple-icon-180.png">
