--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </script>
     <script type="text/javascript" src="SalatTimeTable24.minify.json"></script>
     <script type="text/javascript" src="english_hijri_mapping.json"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/index.js" defer></script>
     <!-- <script src="/static/js/bundle.js"></script>
     <script src="/static/js/0.chunk.js"></script>
     <script src="/static/js/main.chunk.js"></script> -->
