--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </tbody>
             </table>
             <div id="mybutton">
-                <button onclick="document.location.href='mailto:jawad.asif.bd+islamictimes@gmail.com'"
+                <button onclick="document.location.href='mailto:jawad.asif.bd@gmail.com'"
                     id="feedback">Feedback</button>
             </div>
         </div>
